Archive2/61/817823e24d10c1/output
main.cpp: In function 'int main()':
main.cpp:16:18: error: 'numeric_limits' is not a member of 'std'
     std::cout << std::numeric_limits<bool>::has_infinity << " " << f<bool>() << std::endl;
                  ^
main.cpp:16:38: error: expected primary-expression before 'bool'
     std::cout << std::numeric_limits<bool>::has_infinity << " " << f<bool>() << std::endl;
                                      ^
